--- a/src/Components/NewCard/Card.css
+++ b/src/Components/NewCard/Card.css
@@ -15,7 +15,7 @@
 } 
 
 body {
-  /* margin: 0; */
+  margin: 0;
   padding: 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
@@ -41,8 +41,9 @@ img {
   height: auto;
 }
 
-.container {
+.cards__container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   background-color: var(--dark-color-lighten);
@@ -158,7 +159,7 @@ img {
 
 @media screen and (max-width: 768px) {
   
-.container {
+.cards__container {
 
   flex-direction: column;
   justify-content: center;
