--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -1,11 +1,12 @@
 
 body {
-  background-color: #12172b;
+  background-color: #000000;
 }
 
 .About__container {
   margin: 20px 40px;
   color: white;
+  box-shadow: 0px 5px 8px -5px  #e7d799
 }
 
 .heading {
@@ -22,6 +23,8 @@ body {
   display: flex;
   justify-content: space-around;
   margin: 20px 80px;
+  padding-top: 40px;
+  padding-bottom: 50px;
 }
 
 .profile {
@@ -61,10 +64,18 @@ body {
   text-align: justify;
 }
 
-a:hover{
+.fab:hover{
   color: gold!important;
 }
-
+.fab{
+color: red;
+}
+.fa-envelope{
+  color: red;
+}
+.fa-envelope:hover{
+  color: gold!important;
+}
 
 @media only screen and (max-width: 1150px) {
   .profiles {
