--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -76,7 +76,9 @@ color: red;
 .fa-envelope:hover{
   color: gold!important;
 }
-
+.About__social{
+  display: flex;
+}
 @media only screen and (max-width: 1150px) {
   .profiles {
     flex-direction: column;
