--- a/src/Components/Cards/Cards.css
+++ b/src/Components/Cards/Cards.css
@@ -36,7 +36,7 @@
   display: flex;
   flex-flow: column;
   width: 100%;
-  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+  box-shadow: 0 6px 20px rgba(255, 202, 56, 0.17);
   -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
   border-radius: 5px;
@@ -61,9 +61,10 @@
   position: absolute;
   bottom: 0;
   margin-left: 15%;
-  padding: 6px 8px;
-  max-width: calc((100%) - 60px);
-  font-size: 12px;
+  padding: 6px 8px; 
+  width:120px;
+  max-width: calc((100%) - 80px);
+  font-size: 14px;
   font-weight: 700;
   color: #000000;
   background-color: gold;
@@ -117,4 +118,15 @@
   .cards__item {
     margin-bottom: 2rem;
   }
+}
+
+@media screen and (max-width: 768px) {
+
+  .cards {
+    padding: 0rem;
+    background: #fff;
+  }
+  
+
+
 }
