--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -3,7 +3,7 @@
 }
 
 .About__container {
-  margin: 20px 40px;
+  margin: 0px 40px -40px;
   color: white;
   box-shadow: 0px 5px 8px -5px  #e7d799
 }
