--- a/src/Pages/Portfolio/Portfolio.css
+++ b/src/Pages/Portfolio/Portfolio.css
@@ -1,12 +1,22 @@
-.Portfolio {
+main {
+  /* margin-top: 10vh; */
+  /* background-color: #6f83f5; */
+  transform: skewY(-6deg);
+  box-shadow: 2px 2px 10px 1px black;
+  position: relative;
+}
 
+.block {
+  transform: skewY(6deg);
+}
+
+.Portfolio {
   background-Position: center;
   background-Size: cover;
   background-Repeat: no-repeat;
 }
 
 .Portfolio__background {
-  
   width: 100%;
   padding-bottom: 100px;
 }
