hover and video update

--- a/src/Pages/Solutions/Solutions.css
+++ b/src/Pages/Solutions/Solutions.css
@@ -72,7 +72,7 @@
 
 
 #Solutions__R1__col1:hover{
-    background-color: rgb(165, 0, 0);
+  background-color: rgba(77, 77, 77, 0.692);
 }
 
 
@@ -82,7 +82,7 @@
 }
 
 #Solutions__R1__col2:hover{
-  background-color: rgb(165, 0, 0);
+  background-color: rgba(77, 77, 77, 0.692);
 }
 #Solutions__R1__col3{
     background-color: rgb(0, 0, 0);
@@ -90,7 +90,7 @@
 
 }
 #Solutions__R1__col3:hover{
-  background-color: rgb(165, 0, 0);
+  background-color: rgba(77, 77, 77, 0.692);
 }
 
 
@@ -100,7 +100,7 @@
 
 }
 #Solutions__R2__col1:hover{
-  background-color: rgb(165, 0, 0);
+  background-color: rgba(77, 77, 77, 0.692);
 }
 
 #Solutions__R2__col2{
@@ -109,7 +109,7 @@
 
 }
 #Solutions__R2__col2:hover{
-  background-color: rgb(165, 0, 0);
+  background-color: rgba(77, 77, 77, 0.692);
 }
 #Solutions__R2__col3{
     background-color: rgb(255, 255, 255);
@@ -117,5 +117,5 @@
 
 }
 #Solutions__R2__col3:hover{
-  background-color: rgb(165, 0, 0);
+  background-color: rgba(77, 77, 77, 0.692);
 }
