contact page update

--- a/src/Components/ContactBanner/ContactBanner.css
+++ b/src/Components/ContactBanner/ContactBanner.css
@@ -3,7 +3,7 @@ video {
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: -100;
 }
 
 .hero-container {
@@ -50,4 +50,23 @@ video {
   .hero-container > p {
     font-size: 30px;
   }
+
+  video {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -100!important;
+}
+
+.hero-container {
+  height: 40vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  object-fit: contain;
+}
 }
