--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -11,6 +11,7 @@
 .heading {
   font-size: 60px;
   color: white;
+  text-shadow: 1px 1px 2px black, 0 0 25px rgb(255, 255, 255), 0 0 5px rgb(0, 0, 0);
 }
 
 .heading span {
