--- a/src/SubPages/Website/Website.css
+++ b/src/SubPages/Website/Website.css
@@ -3,3 +3,70 @@
   opacity: 0.9;
   padding-bottom: 20px;
 }
+
+
+
+.Website__h3{
+  margin: 0px 60px;
+  font-weight: bold;
+  text-align: left !important;
+}
+.Website__h4{
+  margin: 10px 60px;
+  font-weight: bold;
+  color: rgb(168, 148, 32) !important;
+  text-align: left !important;
+}
+.Website__p{
+  margin: 10px 60px;
+  font-size:20px;
+  text-align: left !important;
+}
+
+
+.Website__ul{
+  font-size:15px;
+  margin: 10px 75px;
+  text-align: left;
+}
+
+
+
+@media (max-width:500px){
+  img{
+      margin: 25px auto;
+      }
+
+      
+      .row{
+          padding: 0px;
+          }
+          .Website__h3{
+              padding: 10px;
+              margin: 0px;
+              width: 100%;
+              font-weight: bold;
+              text-align: center;
+          }
+          .Website__h4{
+              padding: 10px;
+              margin: 0px;
+              width: 100%;
+              font-weight: bold;
+              color: rgb(168, 148, 32) !important;
+              text-align: center;
+          }
+          .Website__p{
+              padding: 10px;
+              font-size:20px;
+              margin: 0px;
+              width: 100%;
+              text-align: center;
+          }
+          .Website__ul{
+              padding: 10px;
+              margin: 0px;
+              font-weight: bold;
+              text-align: left;
+          }
+}
