--- a/src/SubPages/Website/Website.css
+++ b/src/SubPages/Website/Website.css
@@ -1,13 +1,59 @@
+
+.Website{
+background-color: #fafafa;
+
+}
+
+.Website__intro{
+  min-height: 60vh;
+  background-image: url('../../Assets/Images/Website-banner-bg.png');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+}
+
+#Website__img{
+display: inline-block;
+padding-top: 50px;
+position: relative;
+max-width: 40%;
+-webkit-filter: grayscale(0) blur(0);
+filter: grayscale(0) blur(0);
+-webkit-transition: .3s ease-in-out;
+transition: 2.3s ease-in-out;
+}
+
+#Website__img:hover{
+  -webkit-filter: grayscale(100%) blur(3px);
+	filter: grayscale(100%) blur(3px);
+
+}
+
+.Website__h1{
+  display: inline-block;
+  padding:50px 10%;
+  color: rgb(168, 148, 32);
+  font-weight: bold;
+  font-family: 'Nunito Sans', sans-serif;
+  text-align: left !important;
+  
+}
+
+
+.Website__row1{
+margin: 0px 20px;
+}
+
 .Website{
   background-color: #fafafa !important;
   opacity: 0.9;
   padding-bottom: 20px;
 }
 
-
-
 .Website__h3{
-  margin: 0px 60px;
+  margin: 20px 60px;
   font-weight: bold;
   text-align: left !important;
 }
@@ -23,21 +69,17 @@
   text-align: left !important;
 }
 
-
 .Website__ul{
   font-size:15px;
   margin: 10px 75px;
   text-align: left;
 }
 
-
-
 @media (max-width:500px){
   img{
       margin: 25px auto;
       }
 
-      
       .row{
           padding: 0px;
           }
