--- a/src/SubPages/Website/Website.css
+++ b/src/SubPages/Website/Website.css
@@ -1,7 +1,9 @@
-
+*{
+  scroll-behavior: smooth;
+}
 .Website{
 background-color: #fafafa;
-
+scroll-behavior: smooth;
 }
 
 .Website__intro{
@@ -11,7 +13,6 @@ background-color: #fafafa;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-
 }
 
 #Website__img{
@@ -25,10 +26,10 @@ filter: grayscale(0) blur(0);
 transition: 2.3s ease-in-out;
 }
 
+
 #Website__img:hover{
   -webkit-filter: grayscale(100%) blur(3px);
 	filter: grayscale(100%) blur(3px);
-
 }
 
 .Website__h1{
@@ -38,7 +39,6 @@ transition: 2.3s ease-in-out;
   font-weight: bold;
   font-family: 'Nunito Sans', sans-serif;
   text-align: left !important;
-  
 }
 
 
@@ -52,7 +52,7 @@ margin: 0px 20px;
   padding-bottom: 20px;
 }
 
-.Website__h3{
+#Website__h3{
   margin: 20px 60px;
   font-weight: bold;
   text-align: left !important;
@@ -83,7 +83,7 @@ margin: 0px 20px;
       .row{
           padding: 0px;
           }
-          .Website__h3{
+          #Website__h3{
               padding: 10px;
               margin: 0px;
               width: 100%;
@@ -111,4 +111,25 @@ margin: 0px 20px;
               font-weight: bold;
               text-align: left;
           }
+
+
+.Website__h1{
+  display: inline-block;
+  font-size: 1.5em;
+  padding:50px 10%;
+  color: rgb(168, 148, 32);
+  font-weight: bold;
+  font-family: 'Nunito Sans', sans-serif;
+  text-align: left !important;
+}
+
+#Website__img{
+  padding-top: 0px;
+  position: relative;
+  max-width: 60%;
+  -webkit-filter: grayscale(0) blur(0);
+  filter: grayscale(0) blur(0);
+  -webkit-transition: .3s ease-in-out;
+  transition: 2.3s ease-in-out;
+  }
 }
