--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -5,7 +5,7 @@
 .About__container {
   margin: 0px 40px -40px;
   color: white;
-  box-shadow: 0px 5px 8px -5px  #e7d799
+
 }
 
 .heading {
@@ -68,10 +68,10 @@
   color: gold!important;
 }
 .fab{
-color: red;
+color: white;
 }
 .fa-envelope{
-  color: red;
+  color: white;
 }
 .fa-envelope:hover{
   color: gold!important;
