--- a/src/Pages/Portfolio/Portfolio.css
+++ b/src/Pages/Portfolio/Portfolio.css
@@ -107,6 +107,8 @@ font-weight: bold;
   color: black;
   opacity: 0.8;
   border-radius: 5px;
+  -webkit-transition: .3s ease-in-out;
+transition: 0.5s ease-in-out;
 
 }
 
