--- a/src/Pages/Solutions/Solutions.css
+++ b/src/Pages/Solutions/Solutions.css
@@ -67,6 +67,7 @@
 
 #Solutions__R1__col1{
     background-color: rgb(0, 0, 0);
+    border-radius: 30px;
     padding: 60px;
 }
 
@@ -74,12 +75,13 @@
 #Solutions__R1__col1:hover{
   background-color: rgba(77, 77, 77, 0.692);
   -webkit-transition: .3s ease-in-out;
-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
 }
 
 
 #Solutions__R1__col2{
     background-color: rgb(255, 255, 255);
+    border-radius: 30px;
     padding: 60px;
 }
 
@@ -90,6 +92,7 @@ transition: 1s ease-in-out;
 }
 #Solutions__R1__col3{
     background-color: rgb(0, 0, 0);
+    border-radius: 30px;
     padding: 60px;
 
 }
@@ -102,6 +105,7 @@ transition: 1s ease-in-out;
 
 #Solutions__R2__col1{
     background-color: rgb(255, 255, 255);
+    border-radius: 30px;
     padding: 60px;
 
 }
@@ -113,6 +117,7 @@ transition: 1s ease-in-out;
 
 #Solutions__R2__col2{
     background-color: rgb(0, 0, 0);
+    border-radius: 30px;
     padding: 60px;
 
 }
@@ -123,6 +128,7 @@ transition: 1s ease-in-out;
 }
 #Solutions__R2__col3{
     background-color: rgb(255, 255, 255);
+    border-radius: 30px;
     padding: 60px;
 
 }
