--- a/src/SubPages/Ecommerce/Ecommerce.css
+++ b/src/SubPages/Ecommerce/Ecommerce.css
@@ -1,53 +1,90 @@
-.Ecommerce{
-    background-image: url('../../Assets/Logo/Theme.jpg');
-    background-Position: center;
-    background-Size: cover;
-    background-Repeat: no-repeat;
-}
-.Ecommerce__background{
-  background-color: #fafafa !important;
-  padding-top: 40px;
-  padding-bottom: 20px;
-
-}
-
-
-.Ecommerce__h3{
-    margin: 0px 60px;
+*{
+    scroll-behavior: smooth;
+  }
+  .Ecommerce1{
+  background-color: #Fafafa;
+  scroll-behavior: smooth;
+  padding-bottom:40px;
+  }
+  
+  .Ecommerce__intro{
+    min-height: 60vh;
+    background-image: url('../../Assets/Images/Website-banner-bg.png');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  
+  #Ecommerce__img{
+  display: inline-block;
+  padding-top: 50px;
+  position: relative;
+  max-width: 40%;
+  -webkit-filter: grayscale(0) blur(0);
+  filter: grayscale(0) blur(0);
+  -webkit-transition: .3s ease-in-out;
+  transition: 1s ease-in-out;
+  }
+  
+  
+  #Ecommerce__img:hover{
+    -webkit-filter: grayscale(100%) blur(3px);
+      filter: grayscale(100%) blur(3px);
+  }
+  
+  .Ecommerce__h1{
+    display: inline-block;
+    padding:50px 10%;
+    color: rgb(168, 148, 32);
+    font-weight: bold;
+    font-family: 'Nunito Sans', sans-serif;
+    text-align: left !important;
+  }
+  
+  
+  .Ecommerce__row1{
+  margin: 0px 20px;
+  }
+  
+  .Ecommerce{
+    background-color: #fafafa !important;
+    opacity: 0.9;
+    padding-bottom: 20px;
+  }
+  
+  #Ecommerce__h3{
+    margin: 20px 60px;
     font-weight: bold;
     text-align: left !important;
-}
-.Ecommerce__h4{
+  }
+  .Ecommerce__h4{
     margin: 10px 60px;
     font-weight: bold;
     color: rgb(168, 148, 32) !important;
     text-align: left !important;
-}
-.Ecommerce__p{
+  }
+  .Ecommerce__p{
     margin: 10px 60px;
     font-size:20px;
     text-align: left !important;
-}
-
-
-.Ecommerce__ul{
+  }
+  
+  .Ecommerce__ul{
     font-size:15px;
     margin: 10px 75px;
     text-align: left;
-}
-
-
-
-@media (max-width:500px){
+  }
+  
+  @media (max-width:500px){
     img{
         margin: 25px auto;
         }
-
-        
+  
         .row{
             padding: 0px;
             }
-            .Ecommerce__h3{
+            #Ecommerce__h3{
                 padding: 10px;
                 margin: 0px;
                 width: 100%;
@@ -75,4 +112,25 @@
                 font-weight: bold;
                 text-align: left;
             }
-}
+  
+  
+  .Ecommerce__h1{
+    display: inline-block;
+    font-size: 1.5em;
+    padding:50px 10%;
+    color: rgb(168, 148, 32);
+    font-weight: bold;
+    font-family: 'Nunito Sans', sans-serif;
+    text-align: left !important;
+  }
+  
+  #Ecommerce__img{
+    padding-top: 0px;
+    position: relative;
+    max-width: 60%;
+    -webkit-filter: grayscale(0) blur(0);
+    filter: grayscale(0) blur(0);
+    -webkit-transition: .3s ease-in-out;
+    transition: 2.3s ease-in-out;
+    }
+  }
