--- a/src/SubPages/Social/Social.css
+++ b/src/SubPages/Social/Social.css
@@ -1,61 +1,95 @@
-.Social{
-    background-image: url('../../Assets/Logo/Theme.jpg');
-    background-Position: center;
-    background-Size: cover;
-    background-Repeat: no-repeat;
-}
-.Social__background{
-  background-color: #fafafa !important;
-  opacity: 0.96;
-  padding-top: 40px;
-  padding-bottom: 20px;
-}
-
-
-.row{
-    padding: 40px 80px;
-    }
-
-.Social__h3{
-    margin: 0px 60px;
+*{
+    scroll-behavior: smooth;
+  }
+  .Social1{
+  background-color: #Fafafa;
+  scroll-behavior: smooth;
+  padding-bottom:40px;
+  }
+  
+  .Social__intro{
+    min-height: 60vh;
+    background-image: url('../../Assets/Images/Website-banner-bg.png');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  
+  #Social__img{
+  display: inline-block;
+  padding-top: 50px;
+  position: relative;
+  max-width: 40%;
+  -webkit-filter: grayscale(0) blur(0);
+  filter: grayscale(0) blur(0);
+  -webkit-transition: .3s ease-in-out;
+  transition: 1s ease-in-out;
+  }
+  
+  
+  #Social__img:hover{
+    -webkit-filter: grayscale(100%) blur(3px);
+      filter: grayscale(100%) blur(3px);
+  }
+  
+  .Social__h1{
+    display: inline-block;
+    padding:50px 10%;
+    color: rgb(168, 148, 32);
+    font-weight: bold;
+    font-family: 'Nunito Sans', sans-serif;
+    text-align: left !important;
+  }
+  
+  
+  .Social__row1{
+  margin: 0px 20px;
+  }
+  
+  .Social{
+    background-color: #fafafa !important;
+    opacity: 0.9;
+    padding-bottom: 20px;
+  }
+  
+  #Social__h3{
+    margin: 20px 60px;
     font-weight: bold;
     text-align: left !important;
-}
-.Social__h4{
+  }
+  .Social__h4{
     margin: 10px 60px;
     font-weight: bold;
     color: rgb(168, 148, 32) !important;
     text-align: left !important;
-}
-.Social__p{
-    font-size:20px;
-
+  }
+  .Social__p{
     margin: 10px 60px;
+    font-size:20px;
     text-align: left !important;
-}
-
-
-.Social__ul{
+  }
+  
+  .Social__ul{
+    font-size:15px;
     margin: 10px 75px;
-
     text-align: left;
-}
-
-
-
-@media (max-width:500px){
+  }
+  
+  @media (max-width:500px){
     img{
         margin: 25px auto;
         }
+  
         .row{
             padding: 0px;
             }
-            .Social__h3{
+            #Social__h3{
                 padding: 10px;
                 margin: 0px;
                 width: 100%;
                 font-weight: bold;
-                text-align: center !important;
+                text-align: center;
             }
             .Social__h4{
                 padding: 10px;
@@ -63,20 +97,40 @@
                 width: 100%;
                 font-weight: bold;
                 color: rgb(168, 148, 32) !important;
-                text-align: center !important;
+                text-align: center;
             }
             .Social__p{
                 padding: 10px;
                 font-size:20px;
                 margin: 0px;
-                font-weight: normal;
                 width: 100%;
-                text-align: center !important;
+                text-align: center;
             }
             .Social__ul{
                 padding: 10px;
                 margin: 0px;
                 font-weight: bold;
-                text-align: center;
+                text-align: left;
             }
-}
+  
+  
+  .Social__h1{
+    display: inline-block;
+    font-size: 1.5em;
+    padding:50px 10%;
+    color: rgb(168, 148, 32);
+    font-weight: bold;
+    font-family: 'Nunito Sans', sans-serif;
+    text-align: left !important;
+  }
+  
+  #Social__img{
+    padding-top: 0px;
+    position: relative;
+    max-width: 60%;
+    -webkit-filter: grayscale(0) blur(0);
+    filter: grayscale(0) blur(0);
+    -webkit-transition: .3s ease-in-out;
+    transition: 2.3s ease-in-out;
+    }
+  }
