--- a/src/SubPages/Hosting/Hosting.css
+++ b/src/SubPages/Hosting/Hosting.css
@@ -1,131 +1,136 @@
-.Hosting{
-    background-Position: center;
-    background-Size: cover;
-    background-Repeat: no-repeat;
-}
-
-.Hosting__background{
-    width: 100%;
-    padding-bottom: 100px;
-}
-.Hosting-container {
-    margin: 0;
-    height: 80vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    object-fit: contain;
-    padding-bottom: 99px;
-    margin-bottom: 41px;
+*{
+    scroll-behavior: smooth;
   }
-
-  .Hosting__row{
-      padding-top:0!important;
-      padding-bottom:0!important;
-  }
-
-  .Hosting-container > h1 {
-    color: #fff;
-    font-size: 100px;
-    margin-top: -100px;
+  .Hosting1{
+  background-color: #Fafafa;
+  scroll-behavior: smooth;
+  padding-bottom:40px;
   }
   
-  .Typewriter {
-    margin-top: 8px;
-    color: #fff;
-    font-size: 32px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
-      'Lucida Sans', Arial, sans-serif;
+  .Hosting__intro{
+    min-height: 60vh;
+    background-image: url('../../Assets/Images/Website-banner-bg.png');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
-
-.Hosting__h1{
-    padding:25px;
-}
-
-.Hosting__p1{
-    padding:25px;
-}
-
-.Hosting__icons{
-    height: 80px;
-
-}
-
-#Hosting__R1__col1{
-    background-color: darkgray;
-    padding: 60px;
-
-}
-
-
-#Hosting__R1__col1:hover{
-    background-color: rgba(228, 213, 9, 0.37);
-}
-
-#Hosting__R1__col2{
-    background-color: lightgray;
-    padding: 60px;
-
-}
-#Hosting__R1__col2:hover{
-    background-color: rgba(228, 213, 9, 0.37);
-}
-#Hosting__R1__col3{
-    background-color: darkgray;
-    padding: 60px;
-
-}
-#Hosting__R1__col3:hover{
-    background-color: rgba(228, 213, 9, 0.37);
-}
-
-
-#Hosting__R2__col1{
-    background-color: lightgray;
-    padding: 60px;
-
-}
-#Hosting__R2__col1:hover{
-    background-color: rgba(228, 213, 9, 0.37);
-}
-
-#Hosting__R2__col2{
-    background-color: darkgray;
-    padding: 60px;
-
-}
-#Hosting__R2__col2:hover{
-    background-color: rgba(228, 213, 9, 0.37);
-}
-#Hosting__R2__col3{
-    background-color: lightgray;
-    padding: 60px;
-
-}
-#Hosting__R2__col3:hover{
-    background-color: rgba(228, 213, 9, 0.37);
-}
-
-
-
-@media screen and (max-width: 960px) {
-    .Hosting-container > h1 {
-      font-size: 70px;
-      margin-top: -150px;
+  
+  #Hosting__img{
+  display: inline-block;
+  padding-top: 50px;
+  position: relative;
+  max-width: 40%;
+  -webkit-filter: grayscale(0) blur(0);
+  filter: grayscale(0) blur(0);
+  -webkit-transition: .3s ease-in-out;
+  transition: 1s ease-in-out;
+  }
+  
+  
+  #Hosting__img:hover{
+    -webkit-filter: grayscale(100%) blur(3px);
+      filter: grayscale(100%) blur(3px);
+  }
+  
+  .Hosting__h1{
+    display: inline-block;
+    padding:50px 10%;
+    color: rgb(168, 148, 32);
+    font-weight: bold;
+    font-family: 'Nunito Sans', sans-serif;
+    text-align: left !important;
+  }
+  
+  
+  .Hosting__row1{
+  margin: 0px 20px;
+  }
+  
+  .Hosting{
+    background-color: #fafafa !important;
+    opacity: 0.9;
+    padding-bottom: 20px;
+  }
+  
+  #Hosting__h3{
+    margin: 20px 60px;
+    font-weight: bold;
+    text-align: left !important;
+  }
+  .Hosting__h4{
+    margin: 10px 60px;
+    font-weight: bold;
+    color: rgb(168, 148, 32) !important;
+    text-align: left !important;
+  }
+  .Hosting__p{
+    margin: 10px 60px;
+    font-size:20px;
+    text-align: left !important;
+  }
+  
+  .Hosting__ul{
+    font-size:15px;
+    margin: 10px 75px;
+    text-align: left;
+  }
+  
+  @media (max-width:500px){
+    img{
+        margin: 25px auto;
+        }
+  
+        .row{
+            padding: 0px;
+            }
+            #Hosting__h3{
+                padding: 10px;
+                margin: 0px;
+                width: 100%;
+                font-weight: bold;
+                text-align: center;
+            }
+            .Hosting__h4{
+                padding: 10px;
+                margin: 0px;
+                width: 100%;
+                font-weight: bold;
+                color: rgb(168, 148, 32) !important;
+                text-align: center;
+            }
+            .Hosting__p{
+                padding: 10px;
+                font-size:20px;
+                margin: 0px;
+                width: 100%;
+                text-align: center;
+            }
+            .Hosting__ul{
+                padding: 10px;
+                margin: 0px;
+                font-weight: bold;
+                text-align: left;
+            }
+  
+  
+  .Hosting__h1{
+    display: inline-block;
+    font-size: 1.5em;
+    padding:50px 10%;
+    color: rgb(168, 148, 32);
+    font-weight: bold;
+    font-family: 'Nunito Sans', sans-serif;
+    text-align: left !important;
+  }
+  
+  #Hosting__img{
+    padding-top: 0px;
+    position: relative;
+    max-width: 60%;
+    -webkit-filter: grayscale(0) blur(0);
+    filter: grayscale(0) blur(0);
+    -webkit-transition: .3s ease-in-out;
+    transition: 2.3s ease-in-out;
     }
   }
-  
-  @media screen and (max-width: 768px) {
-    .Hosting-container > h1 {
-      font-size: 50px;
-      margin-top: -100px;
-    }
-  
-    .Hosting-container > p {
-      font-size: 30px;
-    }
-    
-  }
-  
