--- a/src/Pages/Portfolio/Portfolio.css
+++ b/src/Pages/Portfolio/Portfolio.css
@@ -59,7 +59,6 @@ main {
 }
 
 .client {
-  
   padding: 20px;
 }
 
@@ -86,6 +85,20 @@ main {
   -ms-transform: translate(-50%, -50%);
   color: black;
   opacity: 0;
+}
+
+.btn-secondary {
+  color: #fff;
+  background-color: #fafafa;
+  border-color: #6c757d;
+}
+
+.btn-secondary:hover{
+  color: #fff;
+  background-color: #fafafa;
+  border-color: #6c757d;
+  -webkit-transition: .3s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 
