--- a/src/Pages/Solutions/Solutions.css
+++ b/src/Pages/Solutions/Solutions.css
@@ -60,27 +60,26 @@
 
 .Solutions__icons{
     height: 80px;
-
 }
 
 #Solutions__R1__col1{
     max-width:35%;
+    margin: 20px;
     background-color: rgb(0, 0, 0);
     border-radius: 30px;
     padding: 60px;
 }
 
-
 #Solutions__R1__col1:hover{
   max-width:35%;
-  background-color: rgba(77, 77, 77, 0.692);
+  background-color: rgb(168, 148, 32);
   -webkit-transition: .3s ease-in-out;
   transition: 1s ease-in-out;
 }
 
-
 #Solutions__R1__col2{
   max-width:35%;
+  margin: 20px;
   background-color: rgb(255, 255, 255);
   border-radius: 30px;
   padding: 60px;
@@ -88,59 +87,59 @@
 
 #Solutions__R1__col2:hover{
   max-width:35%;
-  background-color: rgba(77, 77, 77, 0.692);
+   background-color: rgb(168, 148, 32);
   -webkit-transition: .3s ease-in-out;
 transition: 1s ease-in-out;
 }
 
-
 #Solutions__R2__col1{
 max-width:35%;
+margin: 20px;
 background-color: rgb(255, 255, 255);
 border-radius: 30px;
 padding: 60px;
-
 }
+
 #Solutions__R2__col1:hover{
   max-width:35%;
-  background-color: rgba(77, 77, 77, 0.692);
+   background-color: rgb(168, 148, 32);
   -webkit-transition: .3s ease-in-out;
 transition: 1s ease-in-out;
 }
 
 #Solutions__R2__col2{
     max-width:35%;
+    margin: 20px;
     background-color: rgb(0, 0, 0);
     border-radius: 30px;
     padding: 60px;
-
 }
+
 #Solutions__R2__col2:hover{
   max-width:35%;
-  background-color: rgba(77, 77, 77, 0.692);
+   background-color: rgb(168, 148, 32);
   -webkit-transition: .3s ease-in-out;
 transition: 1s ease-in-out;
 }
 
-
 #Solutions__R3__col1{
   max-width:35%;
+  margin: 20px;
   background-color: rgb(0, 0, 0);
   border-radius: 30px;
   padding: 60px;
 }
 
-
 #Solutions__R3__col1:hover{
 max-width:35%;
-background-color: rgba(77, 77, 77, 0.692);
+  background-color: rgb(168, 148, 32);
 -webkit-transition: .3s ease-in-out;
 transition: 1s ease-in-out;
 }
 
-
 #Solutions__R3__col2{
 max-width:35%;
+margin: 20px;
 background-color: rgb(255, 255, 255);
 border-radius: 30px;
 padding: 60px;
@@ -148,7 +147,7 @@ padding: 60px;
 
 #Solutions__R3__col2:hover{
 max-width:35%;
-background-color: rgba(77, 77, 77, 0.692);
+  background-color: rgb(168, 148, 32);
 -webkit-transition: .3s ease-in-out;
 transition: 1s ease-in-out;
 }
