--- a/src/Pages/Portfolio/Portfolio.css
+++ b/src/Pages/Portfolio/Portfolio.css
@@ -129,17 +129,32 @@ transition: 0.5s ease-in-out;
 
 @media screen and (max-width: 960px) {
   .Portfolio-container>h1 {
-    font-size: 70px;
+    font-size: 60px;
     margin-top: -150px;
+  }
+
+  .Portfolio__client__description{
+    padding: 0%;
+
+  }
+  .details{
+    margin-bottom: 41px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .Portfolio-container>h1 {
-    font-size: 50px;
+    font-size: 40px;
     margin-top: -100px;
   }
   .Portfolio-container>p {
     font-size: 30px;
+  }
+
+  .Portfolio__client__description{
+    padding: 0%;
+  }
+  .details{
+    margin-bottom: 41px;
   }
 }
