--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -21,6 +21,7 @@ background-color: rgb(168, 148, 32);
 color: white;
 border-radius: 35px;
 padding: 10px;
+width: 170px;
 font-size: 20px;
 font-weight: bold;
 -webkit-transition: .3s ease-in-out;
